--- a/index.html
+++ b/index.html
@@ -1376,7 +1376,7 @@
 function isUrlValid(url) {
     // Implemente a lógica de validação da URL conforme necessário
     // Este é um exemplo simples que verifica se a URL contém a substring "home"
-    return url.includes("index.html");
+    return url.includes("https://monalizaloren.github.io/pcvRefeito2/");
 }
 
 // Verifica a validade da URL ao carregar a página
@@ -1385,7 +1385,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
     if (!isUrlValid(currentUrl)) {
         // Redireciona para a página de erro ou exibe uma mensagem de erro
-        window.location.href = "erro.html";
+        window.location.href = "https://monalizaloren.github.io/pcvRefeito2/erro.html";
     }
 });
 
