--- a/index.html
+++ b/index.html
@@ -1372,23 +1372,15 @@
         showSlide(currentIndex);
         // script.js
 
-     document.addEventListener('DOMContentLoaded', function () {
-      // Verifica se a URL é válida
-      var urlIsValid = validarURL();
-
-      // Redireciona para a página de erro se a URL não for válida
-      if (!urlIsValid) {
-        window.location.href = 'erro.html';
+   document.addEventListener('DOMContentLoaded', function () {
+      // Verifica se a URL contém "index.html"
+      if (window.location.href.indexOf('https://monalizaloren.github.io/pcvRefeito2/') === -1) {
+        // Redireciona para a página de erro se a URL não contém "index.html"
+        window.location.href = 'https://monalizaloren.github.io/pcvRefeito2/erro.html';
       }
     });
 
-    function validarURL() {
-      // Obtém a parte do caminho da URL após o domínio
-      var path = window.location.pathname;
-
-      // Verifica se o caminho é válido (por exemplo, contém "index.html")
-      return path.includes('index.html');
-    }
+        prevSlide();
 
     </script>
 </body>
