--- a/index.html
+++ b/index.html
@@ -1374,8 +1374,10 @@
 
    document.addEventListener('DOMContentLoaded', function () {
       // Verifica se a URL contém "index.html"
-      if (window.location.href.indexOf('https://monalizaloren.github.io/pcvRefeito2/') === -1) {
-        // Redireciona para a página de erro se a URL não contém "index.html"
+      if (window.location.href==='https://monalizaloren.github.io/pcvRefeito2/') {
+       window.location.href==='https://monalizaloren.github.io/pcvRefeito2/'
+      }
+       else{
         window.location.href = 'https://monalizaloren.github.io/pcvRefeito2/erro.html';
       }
     });
