--- a/index.html
+++ b/index.html
@@ -1375,14 +1375,14 @@
    document.addEventListener('DOMContentLoaded', function () {
       // Verifica se a URL contém "index.html"
       if (window.location.href==='https://monalizaloren.github.io/pcvRefeito2/') {
-       window.location.href==='https://monalizaloren.github.io/pcvRefeito2/'
+       console.log('tudo certo')
       }
        else{
         window.location.href = 'https://monalizaloren.github.io/pcvRefeito2/erro.html';
       }
     });
 
-        prevSlide();
+        
 
     </script>
 </body>
